tests/snapshots/runtime_error_fixtures/primop_string_len_type.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/primop_string_len_type.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[1 of 7] Compiling  Assert
[2 of 7] Compiling  IO
[3 of 7] Compiling  List
[4 of 7] Compiling  Numeric
[5 of 7] Compiling  Option
[6 of 7] Compiling  String
• 1 error • examples/runtime_errors/primop_string_len_type.flx
error[E300]: Type Mismatch

I found a type mismatch.

  examples/runtime_errors/primop_string_len_type.flx:2:30
  |
2 |     let ignored = string_len(1)
  |                              ^
  |                              - this expression has type `Int`

  |                              - argument type is known at compile time

Note:
  expected type: String
  found type: Int

Help:
  Try `to_string(...)` to convert a `Int` into a `String`.
  argument 1 to `string_len` does not match the imported boundary type
